# pytest-mongo

./: .coderabbit.yaml  .coveragerc  .pre-commit-config.yaml  CHANGES.rst  Pipfile  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  build.yml  diagram.yml  pr-check.yml  pre-commit.yml  pypi.yml  release.yml  single-mongo.yml  tests-auth.yml  tests-oldest.yml  tests.yml
docs/: architecture.mmd
newsfragments/: +1e72a67c.misc.rst  +34ca4105.misc.rst  +6306d6cf.misc.rst  +a6a9e78e.misc.rst  +c6bd7edc.misc.rst  +c76e72c5.misc.rst  +dcba99be.misc.rst  +e347c5d9.misc.rst  +pyprojectfmt.misc.rst  663.bugfix.rst  690.misc.rst  712.misc.rst  714.misc.rst  715.misc.rst  721.misc.rst  723.feature.rst  725.bugfix.rst  728.misc.rst  735.misc.rst  742.break.rst  742.feature.rst  745.break.rst  745.bugfix.rst  745.misc.rst  747.break.rst  747.feature.rst  812.feature.rst
oldest/: requirements.txt
pytest_mongo/: __init__.py  config.py  executor.py  executor_noop.py  factories.py  mongoclient.py  plugin.py
pytest_mongo/factories/: __init__.py  client.py  noprocess.py  process.py
tests/: conftest.py  test_auth.py  test_mongo.py  test_mongo_cleanup.py  test_noopexecutor.py
