[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61.0.0" ]

[project]
name = "pytest-mongo"
version = "4.0.0"
description = "MongoDB process and client fixtures plugin for Pytest."
readme = "README.rst"
keywords = [ "fixture", "mongo", "mongodb", "pytest", "tests" ]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mirakuru>=2.6.0",
    "port-for>=0.7.3",
    "pymongo>=4.10.0",
    "pytest>=8.4",
]

[[project.authors]]
name = "Grzegorz Śliwiński"
email = "fizyk+pypi@fizyk.dev"

[project.entry-points.pytest11]
pytest_mongo = "pytest_mongo.plugin"

[project.urls]
Source = "https://github.com/dbfixtures/pytest-mongo"
"Bug Tracker" = "https://github.com/dbfixtures/pytest-mongo/issues"
Changelog = "https://github.com/dbfixtures/pytest-mongo/blob/v4.0.0/CHANGES.rst"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = [ "pytest_mongo*" ]
exclude = [ "tests*" ]
namespaces = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
]
# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
# name = "publish"
# cmd = "./publish.sh"

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
sub_table_spacing = "\n"

[tool.pytest]
addopts = [ "--showlocals", "--verbose" ]
strict_xfail = true
testpaths = [ "tests" ]

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made
[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pytest_mongo/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'Changelog = "https://github.com/dbfixtures/pytest-mongo/blob/v{current_version}/CHANGES.rst"'

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "4.0.0"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/dbfixtures/pytest-mongo/issues/{issue}>`__"
single_file = true

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneus"
showcontent = true
