[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11" ]

[project]
name = "pytest-mongo"
version = "4.0.0"
description = "MongoDB process and client fixtures plugin for Pytest."
readme = "README.rst"
keywords = [ "fixture", "mongo", "mongodb", "pytest", "tests" ]
license = "LGPL-3.0-or-later"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mirakuru>=2.6.0",
    "port-for>=0.7.3",
    "pymongo>=4.10.0",
    "pytest>=8.4",
]

[[project.authors]]
name = "Grzegorz Śliwiński"
email = "fizyk+pypi@fizyk.dev"

[project.entry-points.pytest11]
pytest_mongo = "pytest_mongo.plugin"

[project.urls]
Source = "https://github.com/dbfixtures/pytest-mongo"
"Bug Tracker" = "https://github.com/dbfixtures/pytest-mongo/issues"
Changelog = "https://github.com/dbfixtures/pytest-mongo/blob/v4.0.0/CHANGES.rst"

[dependency-groups]
dev = [
    "coverage==7.14.2",
    "mirakuru==3.0.2",
    "mypy==2.1.0; implementation_name=='cpython'",
    "port-for==1.0.0",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pymongo==4.17.0",
    "pytest==9.1.1",
    "pytest-xdist==3.8.0",
    "tbump==6.11.0",
    "towncrier==25.8.0",
]

[tool.uv.build-backend]
module-name = "pytest_mongo"
module-root = ""
source-include = [ "CHANGES.rst" ]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
]
# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
# name = "publish"
# cmd = "./publish.sh"

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
sub_table_spacing = "\n"

[tool.pytest]
addopts = [ "--showlocals", "--verbose" ]
markers = [
    """\
    xdist_group: group tests so they run on the same xdist worker (registered for serial runs where pytest-xdist is \
    disabled)\
    """,
]
strict_xfail = true
testpaths = [ "tests" ]

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made
[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "uv run towncrier build --version {new_version} --yes"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pytest_mongo/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'Changelog = "https://github.com/dbfixtures/pytest-mongo/blob/v{current_version}/CHANGES.rst"'

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "4.0.0"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/dbfixtures/pytest-mongo/issues/{issue}>`__"
single_file = true

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneus"
showcontent = true
